--- a/styles/style.css
+++ b/styles/style.css
@@ -1,2 +1,152 @@
 @import 'reset.css';
 @import'setup.css';
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import 'header.css';
+@import 'footer.css';
+
+/*Typography*/
+
+
+.loud-voice {
+	font-family: "Abril Fatface", serif;
+	font-size: clamp(40px, 10vw, 48px);
+}
+
+.attention-voice {
+	font-family: "Abril Fatface", serif;
+	font-size: clamp(32px, 10vw, 40px);
+}
+
+.notice-voice {
+	font-family: "Abril Fatface", serif;
+	font-size: clamp(24px, 10vw, 32px);
+
+}
+
+.firm-voice {
+	 font-family: "Poppins", serif;
+	 font-size: 24px;
+}
+
+p, .calm-voice {
+	 font-family: "Poppins", serif;
+	 font-size: 16px;
+	 line-height: 1.6;
+}
+
+/*body*/
+
+body{
+	background-color: var(--color);
+}
+
+
+
+/* about section */
+
+.about-section p + p {
+	margin-top: 20px;
+}
+
+
+/*project section*/
+
+
+.projects-section .inner-column {
+	padding-left: 0;
+	padding-right: 0;
+}
+
+.projects-section li {
+/*	display: flex;*/
+	position: relative;
+}
+
+.projects-section li + li {
+	margin-top: 10px;
+}
+
+.projects-section .boxes {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	height:100%;
+	width: 20%;
+	display: flex;
+	gap: 3px;
+	border: 1px solid black;
+	transition: 0.3s ease-in-out;
+
+}
+
+.projects-section .boxes div {
+	background: var(--color);
+/*	flex-grow: 2;*/
+
+
+}
+.projects-section .boxes div:nth-of-type(1){
+	flex-grow:8;
+} 
+.projects-section .boxes div:nth-of-type(2){
+	flex-grow:4;
+} 
+.projects-section .boxes div:nth-of-type(3){
+	flex-grow:2;
+} 
+.projects-section .boxes div:nth-of-type(4){
+	flex-grow:1;
+} 
+
+.projects-section li:hover .boxes{
+	width: 80%;
+
+}
+
+.projects-section .link-container{
+	background: black;
+	padding: 5px 15px;
+
+
+
+}
+
+
+.projects-section a {
+	color: var(--color);
+	mix-blend-mode: difference;
+	position: relative;
+	z-index: 1;
+}
+
+
+
+
+
+
+/* contact section */
+
+.contact-section p + div {
+	margin-top: 10px;
+}
+
+.contact-section .email-container {
+	background-image: url("../images/link-brush.png");
+	padding: 15px 2px;
+	background-size: contain;
+	bacground-position: center center;
+
+}
+
+.contact-section .email-container a {
+		color: var(--color);
+}
+
+
+
+/* links section */
+
+.links-section ul {
+	display: flex;
+	justify-content: space-around;
+}
