--- a/resume/styles/style.css
+++ b/resume/styles/style.css
@@ -123,8 +123,9 @@ h3 + h4{
 
 .skill-card h2{
 	color: var(--color);
-	font-size: 25vw;
+	font-size: 120px;
 	padding: 10px 45px;
+	text-align: center;
 }
 
 .work-card li + li{
@@ -137,4 +138,104 @@ h3 + h4{
 .links-section ul {
 	display: flex;
 	justify-content: space-around;
+}
+
+
+/*desktop*/
+
+@media (min-width: 1000px){
+
+	header{
+		display: none;
+	}
+
+	footer{
+		
+	}
+
+	footer, picture{
+		position: fixed;
+		z-index: 1;
+		top:00;
+		right: 120px;
+		height: 100%;
+		
+	}
+
+
+	.small-phone{
+		display: none;
+	}
+
+
+	.inner-column{
+		padding-left: 100px;
+	}
+
+	.greeting{
+	display: block;
+}
+
+	.amazon, .karachi, .conestoga, .arunachal{
+		display: flex;
+	}
+
+	.amazon .work-card{
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+
+	.karachi .work-card{
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+
+
+	.conestoga .work-card{
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+
+	.arunachal .work-card{
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+
+
+	.work-card, .black-card{
+		flex-basis: 50%;
+	}
+
+	.skills .inner-column{
+		display: flex;
+	}
+
+	.skill-card{
+		flex-basis: 50%;
+
+	}
+
+
+/*typography*/
+
+	.calm-voice {
+	 font-family: "Poppins", serif;
+	 font-size: 14px;
+	 line-height: 1.3;
+
+}
+
+	.black-card li + li{
+		padding-top: 2px;
+	}
+
+	.skill-card h2{
+	color: var(--color);
+	font-size: 60px;
+	padding: 70px 25px;
+	
 }
