--- a/projects/layout-garden/styles/style.css
+++ b/projects/layout-garden/styles/style.css
@@ -68,6 +68,14 @@ p,a{
 	font-family: helvetica;
 }
 
+summary{
+	line-height: 1.3;
+	letter-spacing: 0.1em;
+	padding: 5px;
+	font-size: 20px;
+	font-family: helvetica;
+}
+
 /*  */
 
 body{
@@ -160,6 +168,40 @@ footer p{
 	flex-direction: column;
 	gap: 5px;
 }
+
+/*tom-cruise-section*/
+
+.third{
+	background-color: #4ca772;
+}
+
+.third picture{
+
+	box-shadow: 5px 5px black;
+	border-radius: 1%;
+}
+
+.third details{
+
+	border-bottom: 1px solid ;
+  border-radius: 4px;
+  padding: 1.2em 0.5em 0;
+  margin-bottom: 10px;
+  box-shadow: 5px 5px 5px black;
+
+}
+
+.third details[open] {
+  padding: 0.5em;
+}
+
+.third details[open] summary {
+  border-bottom: 1px solid #414857;
+  margin-bottom: 0.5em;
+}
+
+/*tom-cruise-section-ends*/
+
 
 @media (min-width: 700px){
 	
@@ -270,8 +312,184 @@ footer p{
 	.box+.box{
 	margin-top: 0px;
 }
+
+	.third .inner-column{
+
+		display: flex;
+		flex-direction: row;
+		gap: 20px;
+
+
+}
+
+	.third picture{	
+
+		max-width: 350px;
+		flex: 0 0 auto;
+
+}
+
+
+
+
+	
+	.info-tom{
+
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		margin: 20px 20px;
+
+	}
+
 	
 }
+
+/*samsung section*/
+
+.four, .item-list ul{
+	background-color: #ffffff;
+}
+h2{
+	font-size: 50px;
+	font-family: futura;
+	font-weight: 550;
+	text-align: center;
+	margin-bottom: 40px;
+	margin-top: 20px;
+	line-height: 1.2em;
+}
+
+h3{
+	font-size: 16px;
+	font-family: futura;
+	font-weight: 550;
+	text-align: center;
+	margin-bottom: 40px;
+	margin-top: 20px;
+}
+
+  .four nav ul{
+	display: flex;
+	gap: 40px;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+  margin-bottom: 20px;
+
+  a{
+    display: inline-block;
+    font-size: 25px;
+    letter-spacing: 0px;
+		font-family: futura;
+		font-weight: 550;
+  }
+
+  a:hover{
+  	border-bottom: 2px solid black;
+  }
+
+}
+
+
+
+
+.item-list div, .item-list li{
+	background-color: #f6f7fa;
+	border-radius: 5%;
+	display: flex;
+	align-items: center;
+	}
+
+.item-list div{
+	margin-bottom: 20px;
+}
+
+.mobile{
+
+	flex-direction: row;
+	justify-content: space-around;
+	picture{
+		border-right: 8px solid white;
+		padding: 15px;
+	}
+	h3{
+		padding:15px;
+		text-align: left;
+	}
+
+}
+
+.item-list ul{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	gap: 20px;
+	picture{
+		max-width: 44%;
+	}
+}
+
+.item-list li{
+	flex-direction: column;
+	flex-grow: 1;
+	justify-content: space-around;
+	max-width: 44%;
+	padding: 15px;
+
+}
+
+@media (min-width: 700px){
+	.four{
+		.inner-column{
+		max-width: none;
+	}
+
+	ul{
+		overflow-x: hidden;
+		justify-content: center;
+		a{
+			font-size: 18px;
+		}
+	}
+
+	h2{
+		font-size: 40px;
+	}
+} 
+
+
+.mobile{
+	display: flex;
+	flex-direction: column;
+	flex-basis: 60%;
+	picture{
+		border: none;
+	}
+	h3{
+		width: none;
+	}
+	picture{
+		width: 100%;
+	}
+}
+
+.item-list li{
+	flex-basis: 45%;
+	flex-direction: column;
+}
+
+.item-list{
+	display: flex;
+
+}
+
+
+
+
+}
+
 
 
 
